--- a/src/assets/scss/object/component/_clipPath.scss
+++ b/src/assets/scss/object/component/_clipPath.scss
@@ -1,39 +1,39 @@
-// .c-clipbg__CS {
-// 	background: linear-gradient(
-// 		90deg,
-// 		rgba(37, 121, 191, 1) 0%,
-// 		rgba(37, 147, 213, 1) 50%
-// 	);
-// 	-webkit-clip-path: polygon(100% 0, 0% 100%, 100% 100%);
-// 	clip-path: polygon(100% 0, 0% 100%, 100% 100%);
-// 	height: 90px;
-// }
+.c-clipbg__CS {
+	background: linear-gradient(
+		90deg,
+		rgba(37, 121, 191, 1) 0%,
+		rgba(37, 147, 213, 1) 50%
+	);
+	-webkit-clip-path: polygon(100% 0, 0% 100%, 100% 100%);
+	clip-path: polygon(100% 0, 0% 100%, 100% 100%);
+	height: 90px;
+}
 
-// .c-clipbg__CS2 {
-// 	background: linear-gradient(
-// 		90deg,
-// 		rgba(37, 121, 191, 1) 0%,
-// 		rgba(37, 147, 213, 1) 50%
-// 	);
-// 	-webkit-clip-path: polygon(100% 0, 0 0, 0 100%);
-// 	clip-path: polygon(100% 0, 0 0, 0 100%);
-// 	height: 90px;
-// 	&::before{
-// 		background-color: #fff;
-// 	}
-// }
+.c-clipbg__CS2 {
+	background: linear-gradient(
+		90deg,
+		rgba(37, 121, 191, 1) 0%,
+		rgba(37, 147, 213, 1) 50%
+	);
+	-webkit-clip-path: polygon(100% 0, 0 0, 0 100%);
+	clip-path: polygon(100% 0, 0 0, 0 100%);
+	height: 90px;
+	&::before {
+		background-color: #fff;
+	}
+}
 
-// .white_bg {
-// 	background: #fff !important;
-// }
+.white_bg {
+	background: #fff !important;
+}
 
 .clip {
-    -webkit-clip-path: polygon(0 87%, 100% 0%, 100% 100%, 0% 100%);
-    clip-path: polygon(0 95%, 100% 0%, 100% 100%, 0% 100%);
-    background: linear-gradient(to right, #2579BF,#2593D5);
-    height: 93px;
-    width: 100%;
-    position: absolute;
-    bottom: 0;
-    right: 0;
+	-webkit-clip-path: polygon(0 87%, 100% 0%, 100% 100%, 0% 100%);
+	clip-path: polygon(0 95%, 100% 0%, 100% 100%, 0% 100%);
+	background: linear-gradient(to right, #2579bf, #2593d5);
+	height: 93px;
+	width: 100%;
+	position: absolute;
+	bottom: 0;
+	right: 0;
 }
