Changed: made changes on group business and real estate purchase

--- a/src/assets/scss/object/component/_card.scss
+++ b/src/assets/scss/object/component/_card.scss
@@ -336,6 +336,14 @@
 	border-right: 2px dashed #aeaeae;
 	padding-left: 35px;
 	@include is-max(1000px){
+		width: 48%;
+		padding: unset;
+		border: none;
+		padding-bottom: 15px;
+		border-bottom: 2px dashed #aeaeae;
+	}
+
+	@include is-max(750px){
 		width: 100%;
 		padding: unset;
 		border: none;
@@ -356,15 +364,36 @@
 	}
 
 	&__bottom{
-		@include is-max(1000px){
+		padding-top: 15px;
+		@include is-max(750px){
 			padding-bottom: 25px;
 			border-bottom: 2px dashed #aeaeae;
 		}
 	}
 
-	&:last-child{
+	&:last-child, &:nth-of-type(3){
 		padding-right: unset;
-		border: none;
+		@include is-min(1000px){
+			border: none;
+		}
+	}
+
+	&:nth-of-type(5){
+		padding-left: unset;
+	}
+
+	&:nth-of-type(7){
+
+		@include is-min(1000px){
+			border: none !important;
+		}
+		@include is-min(750px){
+			padding-right: unset;
+			border-bottom: 2px dashed #aeaeae;
+		}
+
+
+
 	}
 
 	&:first-child{
@@ -372,8 +401,10 @@
 	}
 
 	&.bd-pr-n{
-		border: none;
+		@include is-max(750px){
+			border: none;
 		padding-right: unset;
+		}
 	}
 }
 
