--- a/src/assets/scss/pages/_groupbusiness.scss
+++ b/src/assets/scss/pages/_groupbusiness.scss
@@ -30,7 +30,7 @@
 	&__eng_ttl{
 		font-family: century-gothic, sans-serif;
 		@include font-line(10);
-		color: #95C6E7;
+		color: #fff;
 		letter-spacing: 4px;
 
 		@include is-max(1000px){
@@ -40,11 +40,10 @@
 
 	&__header{
 		font-family: yu-mincho-pr6n, sans-serif;
-		@include font-line(30);
+		@include font-line(30,48);
 		color: #fff;
-		letter-spacing: 6px;
-		line-height: 1.7;
-		padding-top: 15px;
+		letter-spacing: .22em;
+		padding-top: 7px;
 		padding-bottom: 55px;
 
 		@include is-max(1000px){
@@ -75,12 +74,11 @@
 		&--left{
 			font-family:cross-platform-yu-gothic;
 			font-weight: 500;
-			@include font-line(13);
-			text-align: left;
+			@include font-line(13,26);
+			text-align: justify;
 			color: #fff;
 			padding-right: 95px;
-			line-height: 2;
-			letter-spacing: 2px;
+			letter-spacing: .2em;
 
 			@include is-max(1000px){
 				padding-right: unset;
